// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Remark-Markdown Web Component renders basic component 1`] = `<remark-markdown />`;

exports[`Remark-Markdown Web Component renders basic component 2`] = `
<div>
</div>
`;

exports[`Remark-Markdown Web Component renders component with \`src\` parameter 1`] = `
<remark-markdown
  src="https://raw.github.com/adamschwartz/github-markdown-kitchen-sink/master/README.md"
/>
`;

exports[`Remark-Markdown Web Component renders component with \`src\` parameter 2`] = `
<div>
  <h1>
    Test
  </h1>
</div>
`;
